tests/ui/suggestions/path-display.stderr
error[E0277]: `Path` doesn't implement `std::fmt::Display`
  --> $DIR/path-display.rs:5:20
   |
LL |     println!("{}", path);
   |     ---------------^^^^-
   |     |              |
   |     |              `Path` cannot be formatted with the default formatter; call `.display()` on it
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
   = help: the trait `std::fmt::Display` is not implemented for `Path`
   = note: call `.display()` or `.to_string_lossy()` to safely print paths, as they may contain non-Unicode data

error[E0277]: `PathBuf` doesn't implement `std::fmt::Display`
  --> $DIR/path-display.rs:9:20
   |
LL |     println!("{}", path);
   |     ---------------^^^^-
   |     |              |
   |     |              `PathBuf` cannot be formatted with the default formatter; call `.display()` on it
   |     in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
   = help: the trait `std::fmt::Display` is not implemented for `PathBuf`
   = note: call `.display()` or `.to_string_lossy()` to safely print paths, as they may contain non-Unicode data

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
